switch to german + new content

--- a/_posts/2015-12-17-what.md
+++ b/_posts/2015-12-17-what.md
@@ -1,12 +1,10 @@
 ---
-title: "What"
+title: "Was"
 bg: what
 color: white
 fa-icon: question
 ---
 
-# flock.email
-
-- is awesome
-- makes everything better
-- yes I am serious
+- Kommunikation findet in flexibel erweiterbaren Themengebieten und Kategorien statt
+- Sie bestimmen wer mitdiskutieren oder nur mitlesen darf
+- Inhalte sind durchsuchbar und die innovative Darstellung sorgt für einfache Nachvollziehbarkeit - auch für neue Mitglieder
