--- a/_posts/2015-12-20-signup.md
+++ b/_posts/2015-12-20-signup.md
@@ -1,10 +1,10 @@
 ---
-title: "Interested"
+title: "Interessiert"
 bg: signup
 color: white
 fa-icon: question
 ---
 
-### If you want to know more about flock.email please sign up for our newsletter
+### Wenn du mehr über flock.email erfahren willst, melde dich für unseren Newsletter an
 
 {% include signup.html %}
