--- a/_posts/2015-12-16-intro.md
+++ b/_posts/2015-12-16-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "home"
+title: "Start"
 bg: intro
 color: grey
 style: center
@@ -12,4 +12,6 @@ style: center
   <i class="fa fa-pencil-square-o fa-stack-1x text-intro"></i>
 </span>
 
-## Making communication with a group of people a pleasure
+## Bringen Sie Struktur in die Kommunikation Ihres Vereins
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1yydcG9woWA" frameborder="0" allowfullscreen></iframe>
