--- a/_posts/2015-12-18-why.md
+++ b/_posts/2015-12-18-why.md
@@ -1,19 +1,10 @@
 ---
-title: "Why"
+title: "Warum"
 bg: why
 color: white
 fa-icon: question
 ---
 
-# Because...
-
-- E-mail clients are not intended for group communication but often used for it
-- New technologies exclude not tech-savvy people
-- E-mail provides only “enriched text” messages
-- E-mail conversations can not be shared
-- The currently dominant presentation of a conversation (list with indentations) results in a confusing wall-of-text
-
-
-
-
-
+- E-Mail Programme sind nicht für Gruppenkommunikation ausgelegt, werden aber oft dafür verwendet
+- E-Mail Konversationen können nicht geteilt werden
+- Die derzeit gängige Darstellung von E-Mail Konversationen, führt zu einem verwirrenden unsortierten Buchstabensalat
