--- a/_posts/2015-12-19-how.md
+++ b/_posts/2015-12-19-how.md
@@ -1,13 +1,8 @@
 ---
-title: "How"
+title: "Wie"
 bg: features
 color: white
 fa-icon: question
 ---
 
-# What are the features of flock.email
-
-- create lists
-- permissions
-- email
-- ...
+## Flock funktioniert auf dem E-Mail Protokoll. Das bedeutet, dass Sie sowohl unsere App als auch Ihr gewohntes E-Mail Programm zur selben Zeit verwenden können. Somit binden Sie Ihre Mitglieder noch mehr in die Kommunikation Ihres Vereins ein.
