--- a/_posts/2015-12-16-intro.md
+++ b/_posts/2015-12-16-intro.md
@@ -14,4 +14,4 @@ style: center
 
 ## Bringen Sie Struktur in die Kommunikation Ihres Vereins
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1yydcG9woWA" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fec9J5I9YZQ" frameborder="0" allowfullscreen></iframe>
