chore(intro): adds signup to intro, removes icon

--- a/_posts/2015-12-16-intro.md
+++ b/_posts/2015-12-16-intro.md
@@ -1,17 +1,14 @@
 ---
 title: "flock.email"
 bg: intro
-color: grey
+color: darkgrey
 style: center
 ---
 
-# flock.email
+# Bringen Sie Struktur in die Kommunikation Ihres Vereins
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-pencil-square-o fa-stack-1x text-intro"></i>
-</span>
-
-## Bringen Sie Struktur in die Kommunikation Ihres Vereins
+<br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/fec9J5I9YZQ?rel=0" frameborder="0" allowfullscreen></iframe>
+
+{% include signup.html %}
