feat(what): brings text

--- a/_posts/2015-12-17-what.md
+++ b/_posts/2015-12-17-what.md
@@ -1,10 +1,15 @@
 ---
 title: "Was"
-bg: what
-color: white
-fa-icon: question
+bg: grey
+color: black
 ---
 
-- Kommunikation findet in flexibel erweiterbaren Themengebieten und Kategorien statt
-- Sie bestimmen wer mitdiskutieren oder nur mitlesen darf
-- Inhalte sind durchsuchbar und die innovative Darstellung sorgt für einfache Nachvollziehbarkeit - auch für neue Mitglieder
+<h1>Schuster, bleib bei deinem Leisten</h1>
+
+<div class="left-side">
+    <ul>
+        <li>Kommunikation findet in flexibel erweiterbaren Themengebieten und Kategorien statt</li>
+        <li>Sie bestimmen wer mitdiskutieren oder nur mitlesen darf</li>
+        <li>Inhalte sind durchsuchbar und die innovative Darstellung sorgt für einfache Nachvollziehbarkeit - auch für neue Mitglieder</li>
+    </ul>
+</div>
