fix(ghpages): fixes probs with ghpages

--- a/_posts/2015-12-18-why.md
+++ b/_posts/2015-12-18-why.md
@@ -3,6 +3,7 @@ title: "Warum"
 bg: why
 color: white
 fa-icon: question
+id: why
 ---
 
 - E-Mail Programme sind nicht für Gruppenkommunikation ausgelegt, werden aber oft dafür verwendet
