--- a/_posts/2015-12-19-how.md
+++ b/_posts/2015-12-19-how.md
@@ -3,6 +3,7 @@ title: "Wie"
 bg: features
 color: white
 fa-icon: question
+id: how
 ---
 
 ## Flock funktioniert auf dem E-Mail Protokoll. Das bedeutet, dass Sie sowohl unsere App als auch Ihr gewohntes E-Mail Programm zur selben Zeit verwenden können. Somit binden Sie Ihre Mitglieder noch mehr in die Kommunikation Ihres Vereins ein.
