--- a/_posts/2015-12-20-signup.md
+++ b/_posts/2015-12-20-signup.md
@@ -3,6 +3,7 @@ title: "Interessiert"
 bg: signup
 color: white
 fa-icon: question
+id: signup
 ---
 
 ### Wenn du mehr über flock.email erfahren willst, melde dich für unseren Newsletter an
